Version 2.5.14dev:

* Changes to how fastest-possible-mode works and interacts with
  frame rendering (solves some issues, might introduce new ones...)
* Fixed and activated more recent Picasso96 (uaegfx) code.
* Enabled emulation of GFX hardware boards (Picassso IV, etc).
* A bit more code cleanup and fixes to make code compatible with MSVC.
* FIXME: PPC

Version 2.5.13dev:

* Updated emulation core from WinUAE 2900b14.
* Harmonize CD IOCTL / image initialization with WinUAE.
* Initial version of QEmu PPC CPU integration (not fully working yet).
* Removed --disable-cpuboard option to configure (no longer needed).
* Updated Picasso96 code, but old version is still used (needs more work).
* Add internal HRTMon rom to the rom list on startup.
* Show GUI warning when some config incompatibilities are detected.
* GUI warning when custom uae_ options fails or are not recognized.
* Added more compiler warnings by default.
* More code cleanup, especially in src/od-fs.
* Merged several modules which were similar between FS-UAE and WinUAE.

Version 2.5.12dev:

* Updated emulation core from WinUAE 2900b12.
* FS-UAE on Windows now supports unicode command line arguments.
* Fixed a bug on Windows preventing load of non-ASCII config file paths.
* Another big-endian fix for loading fs-uae.dat.
* Added xinput_controller_15_6_0_0_windows.conf [Kitty].

Version 2.5.11dev:

* Big-endian support for loading of fs-uae.dat.
* Remove message "no configuration file loaded".
* Re-enable DMS support (missing for a couple of versions).
* Can configure with --disable-cpuboard --disable-ppc.
* Configure script checks if -fno-strict-overflow is recognized.

Version 2.5.10dev:

* Updated emulation core from WinUAE 2900b10.
* Fixed audio initialization (broke in 2.5.9dev).
* New option cpuboard_flash_ext_file (not tested).

Version 2.5.9dev:

* New option cpuboard_flash_file (path to accelerator "ROM").
* Bug fixes and source cleanup based on static analysis.
* Code cleanup in some code modules.